--- a/app/src/main/res/layout/list_item_todo.xml
+++ b/app/src/main/res/layout/list_item_todo.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" >
-
-    <CheckBox android:id="@+id/checkbox_todo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView android:id="@+id/text_todo"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" >
+    <data>
+        <import type="info.izumin.android.droidux.sample.entity.TodoList.Todo" />
+        <variable name="todo" type="Todo" />
+    </data>
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="sample text" />
-</LinearLayout>
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin" >
+
+        <CheckBox android:id="@+id/checkbox_todo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="@{todo.isCompleted()}"/>
+
+        <TextView android:id="@+id/text_todo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{todo.getText()}"
+            tools:text="sample text" />
+    </LinearLayout>
+</layout>
