--- a/app/src/main/res/layout/list_item_todo.xml
+++ b/app/src/main/res/layout/list_item_todo.xml
@@ -17,11 +17,13 @@
         <CheckBox android:id="@+id/checkbox_todo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:focusable="false"
             android:checked="@{todo.isCompleted()}"/>
 
         <TextView android:id="@+id/text_todo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="false"
             android:text="@{todo.getText()}"
             tools:text="sample text" />
     </LinearLayout>
