--- a/examples/todomvc/src/main/res/layout/activity_main.xml
+++ b/examples/todomvc/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="info.izumin.android.droidux.sample.MainActivity" >
+        tools:context=".MainActivity" >
 
         <ListView
             android:id="@+id/list_todo"
