--- a/examples/todomvc/src/main/res/layout/list_item_todo.xml
+++ b/examples/todomvc/src/main/res/layout/list_item_todo.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
     <data>
-        <import type="info.izumin.android.droidux.sample.entity.TodoList.Todo" />
+        <import type="info.izumin.android.droidux.example.todomvc.entity.TodoList.Todo" />
         <variable name="todo" type="Todo" />
     </data>
     <LinearLayout
