Implement counter sample

--- a/examples/counter/src/main/res/layout/activity_main.xml
+++ b/examples/counter/src/main/res/layout/activity_main.xml
@@ -1,12 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="info.izumin.android.droidux.example.counter.MainActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" >
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+    <data>
+        <variable name="handlers" type="info.izumin.android.droidux.example.counter.MainEventHandlers" />
+        <variable name="store" type="info.izumin.android.droidux.example.counter.RootStore" />
+    </data>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="info.izumin.android.droidux.example.counter.MainActivity">
+
+        <TextView
+            android:id="@+id/text_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/counter_vertical_margin"
+            android:layout_marginBottom="@dimen/counter_vertical_margin"
+            android:layout_centerInParent="true"
+            android:textSize="@dimen/text_size_display3"
+            android:text="@{String.valueOf(store.counter().getCount())}"
+            tools:text="16" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_counter"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal" >
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_increment"
+                android:onClick="@{handlers.onClickBtnIncrement}"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_decrement"
+                android:onClick="@{handlers.onClickBtnDecrement}"/>
+        </LinearLayout>
+
+    </RelativeLayout>
+</layout>
