--- a/examples/counter/src/main/res/values/dimens.xml
+++ b/examples/counter/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="counter_vertical_margin">32dp</dimen>
+
+    <dimen name="text_size_display3">56sp</dimen>
 </resources>
